SDKs/twilio.com/twilio_supersim_v1/1.37.4/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.CreateEsimProfileRequest(
    security=operations.CreateEsimProfileSecurity(
        account_sid_auth_token=shared.SchemeAccountSidAuthToken(
            password="YOUR_PASSWORD_HERE",
            username="YOUR_USERNAME_HERE",
        ),
    ),
    request=operations.CreateEsimProfileCreateEsimProfileRequest(
        callback_method="GET",
        callback_url="quas",
        eid="natus",
    ),
)
    
res = s.create_esim_profile(req)

if res.supersim_v1_esim_profile is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `create_esim_profile` - Order an eSIM Profile.
* `create_fleet` - Create a Fleet
* `create_ip_command` - Send an IP Command to a Super SIM.
* `create_network_access_profile` - Create a new Network Access Profile
* `create_network_access_profile_network` - Add a Network resource to the Network Access Profile resource.
* `create_sim` - Register a Super SIM to your Account
* `create_sms_command` - Send SMS Command to a Sim.
* `delete_network_access_profile_network` - Remove a Network resource from the Network Access Profile resource's.
* `fetch_esim_profile` - Fetch an eSIM Profile.
* `fetch_fleet` - Fetch a Fleet instance from your account.
* `fetch_ip_command` - Fetch IP Command instance from your account.
* `fetch_network` - Fetch a Network resource.
* `fetch_network_access_profile` - Fetch a Network Access Profile instance from your account.
* `fetch_network_access_profile_network` - Fetch a Network Access Profile resource's Network resource.
* `fetch_sim` - Fetch a Super SIM instance from your account.
* `fetch_sms_command` - Fetch SMS Command instance from your account.
* `list_billing_period` - Retrieve a list of Billing Periods for a Super SIM.
* `list_esim_profile` - Retrieve a list of eSIM Profiles.
* `list_fleet` - Retrieve a list of Fleets from your account.
* `list_ip_command` - Retrieve a list of IP Commands from your account.
* `list_network` - Retrieve a list of Network resources.
* `list_network_access_profile` - Retrieve a list of Network Access Profiles from your account.
* `list_network_access_profile_network` - Retrieve a list of Network Access Profile resource's Network resource.
* `list_settings_update` - Retrieve a list of Settings Updates.
* `list_sim` - Retrieve a list of Super SIMs from your account.
* `list_sim_ip_address` - Retrieve a list of IP Addresses for the given Super SIM.
* `list_sms_command` - Retrieve a list of SMS Commands from your account.
* `list_usage_record` - List UsageRecords
* `update_fleet` - Updates the given properties of a Super SIM Fleet instance from your account.
* `update_network_access_profile` - Updates the given properties of a Network Access Profile in your account.
* `update_sim` - Updates the given properties of a Super SIM instance from your account.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
